--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "irfanhariyanto",
   "license": "MIT",
   "dependencies": {
-    "@adiwajshing/baileys": "4.4.0",
+    "@adiwajshing/baileys": "npm:baileys-md@^5.0.5",
     "@adiwajshing/keyed-db": "^0.2.4",
     "awesome-phonenumber": "^2.64.0",
     "qrcode-terminal": "^0.12.0",
